# scratchgen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  scratchgen-host  scratchgen-musl
.github/workflows/: release.yml
configs/: example_constrained.json  example_independent.json  example_without_replacement.json
src/: main.rs
