[package]
name = "scratchgen"
version = "0.9.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
globwalk = "0.8"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0"
image = { version = "0.24", features = ["png", "jpeg", "webp", "ico", "tiff"] }
rayon = "1.7"
