[package]
name = "scratchgen"
version = "0.9.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
globwalk = "0.8"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0"
# Keep only the pure-Rust codecs to improve chance of a musl static build
image = { version = "0.24", features = ["png", "jpeg"] }
rayon = "1.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
